
Modules:
- WinSTM (new): Import WinSTM data files.
- Mark by Segmentation (new): Another segmentation/grain marking module, based
  on the classic Vincent algorithm.
- Mask editor tool: Fill voids handles correctly different connectivity of
  grain exterior, noticeable for grains separated only by thin lines.
- Pixmap: Vertical and horizontal rulers always use the same number format.


2.36 (2014-04-02)
Application:
- Translations updated: Czech, French, Russian.

Libraries:
- libgwydgets: Igor Pro .itx graph ASCII export option was added.
- libgwyprocess: Function gwy_data_field_extend() for extending data fields
  with various exterior handling types was added.
- libgwyprocess: A function for Euclidean distance transform of a mask was
  added.
- libgwyapp: gwy_app_wait_start() always creates a progress/cancel dialog,
  even if no parent window is passed.
- libgwyprocess: Grain quantities characterising the moment-equivalent
  ellipses of grains (axis lengths and orientation) were added.
- libgwymodules: Function for obtaining the file name of a container was
  added (mostly useful for pygwy).
- libgwyddion: A GString in-place substring replacement function was added.
- libgwyddion: A function for conversion of text to native EOLs was added.

Modules:
- Columnar synthesis (new): Simulation of columnar film growth.
- Wave synthesis (new): Composes images using interference of waves from a
  number of point sources.
- Euclidean distance transform (new): Creates a data field representing the
  distance transform of given mask.
- Domain synthesis (new): Creates patterns based on a hybrid non-equilibrium
  Ising model.
- MetroPro: Files with header formats 2 and 3 are recognised and imported.
  Almost all header fields are imported to metadata.
- Omicron: Value offsets in grid spectra were corrected.
- Read value: Local curvature at cursor is also calculated and displayed.
- Zeiss: ‘Image Pixel Size’ field is used for real dimensions instead of